Industria Arcanum v1.1.7 Alpha
Lots of changes. Check Github.

--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -1068,6 +1068,216 @@ shedding {
     I:ThaumicExploration.TaintacleMinion.metadata=0
     I:ThaumicExploration.TaintacleMinion.rate=-1
 
+    # Configuration of Shedding for UtilityMobs.AnvilGolem
+    S:UtilityMobs.AnvilGolem.item=
+    I:UtilityMobs.AnvilGolem.lexiconDisplaySize=40
+    I:UtilityMobs.AnvilGolem.metadata=0
+    I:UtilityMobs.AnvilGolem.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.ArmorColossus
+    S:UtilityMobs.ArmorColossus.item=
+    I:UtilityMobs.ArmorColossus.lexiconDisplaySize=40
+    I:UtilityMobs.ArmorColossus.metadata=0
+    I:UtilityMobs.ArmorColossus.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.ArmorGolem
+    S:UtilityMobs.ArmorGolem.item=
+    I:UtilityMobs.ArmorGolem.lexiconDisplaySize=40
+    I:UtilityMobs.ArmorGolem.metadata=0
+    I:UtilityMobs.ArmorGolem.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.BoundSoul
+    S:UtilityMobs.BoundSoul.item=
+    I:UtilityMobs.BoundSoul.lexiconDisplaySize=40
+    I:UtilityMobs.BoundSoul.metadata=0
+    I:UtilityMobs.BoundSoul.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.BrickTurret
+    S:UtilityMobs.BrickTurret.item=
+    I:UtilityMobs.BrickTurret.lexiconDisplaySize=40
+    I:UtilityMobs.BrickTurret.metadata=0
+    I:UtilityMobs.BrickTurret.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.ChestEnderGolem
+    S:UtilityMobs.ChestEnderGolem.item=
+    I:UtilityMobs.ChestEnderGolem.lexiconDisplaySize=40
+    I:UtilityMobs.ChestEnderGolem.metadata=0
+    I:UtilityMobs.ChestEnderGolem.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.ChestGolem
+    S:UtilityMobs.ChestGolem.item=
+    I:UtilityMobs.ChestGolem.lexiconDisplaySize=40
+    I:UtilityMobs.ChestGolem.metadata=0
+    I:UtilityMobs.ChestGolem.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.ChestTrappedGolem
+    S:UtilityMobs.ChestTrappedGolem.item=
+    I:UtilityMobs.ChestTrappedGolem.lexiconDisplaySize=40
+    I:UtilityMobs.ChestTrappedGolem.metadata=0
+    I:UtilityMobs.ChestTrappedGolem.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.FireTurret
+    S:UtilityMobs.FireTurret.item=
+    I:UtilityMobs.FireTurret.lexiconDisplaySize=40
+    I:UtilityMobs.FireTurret.metadata=0
+    I:UtilityMobs.FireTurret.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.FireballTurret
+    S:UtilityMobs.FireballTurret.item=
+    I:UtilityMobs.FireballTurret.lexiconDisplaySize=40
+    I:UtilityMobs.FireballTurret.metadata=0
+    I:UtilityMobs.FireballTurret.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.FurnaceGolem
+    S:UtilityMobs.FurnaceGolem.item=
+    I:UtilityMobs.FurnaceGolem.lexiconDisplaySize=40
+    I:UtilityMobs.FurnaceGolem.metadata=0
+    I:UtilityMobs.FurnaceGolem.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.GatlingTurret
+    S:UtilityMobs.GatlingTurret.item=
+    I:UtilityMobs.GatlingTurret.lexiconDisplaySize=40
+    I:UtilityMobs.GatlingTurret.metadata=0
+    I:UtilityMobs.GatlingTurret.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.GenericGolem
+    S:UtilityMobs.GenericGolem.item=
+    I:UtilityMobs.GenericGolem.lexiconDisplaySize=40
+    I:UtilityMobs.GenericGolem.metadata=0
+    I:UtilityMobs.GenericGolem.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.GhastTurret
+    S:UtilityMobs.GhastTurret.item=
+    I:UtilityMobs.GhastTurret.lexiconDisplaySize=40
+    I:UtilityMobs.GhastTurret.metadata=0
+    I:UtilityMobs.GhastTurret.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.GildedGolem
+    S:UtilityMobs.GildedGolem.item=
+    I:UtilityMobs.GildedGolem.lexiconDisplaySize=40
+    I:UtilityMobs.GildedGolem.metadata=0
+    I:UtilityMobs.GildedGolem.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.JukeboxGolem
+    S:UtilityMobs.JukeboxGolem.item=
+    I:UtilityMobs.JukeboxGolem.lexiconDisplaySize=40
+    I:UtilityMobs.JukeboxGolem.metadata=0
+    I:UtilityMobs.JukeboxGolem.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.KillerTurret
+    S:UtilityMobs.KillerTurret.item=
+    I:UtilityMobs.KillerTurret.lexiconDisplaySize=40
+    I:UtilityMobs.KillerTurret.metadata=0
+    I:UtilityMobs.KillerTurret.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.LanternGolem
+    S:UtilityMobs.LanternGolem.item=
+    I:UtilityMobs.LanternGolem.lexiconDisplaySize=40
+    I:UtilityMobs.LanternGolem.metadata=0
+    I:UtilityMobs.LanternGolem.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.MelonGolem
+    S:UtilityMobs.MelonGolem.item=
+    I:UtilityMobs.MelonGolem.lexiconDisplaySize=40
+    I:UtilityMobs.MelonGolem.metadata=0
+    I:UtilityMobs.MelonGolem.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.ObsidianColossus
+    S:UtilityMobs.ObsidianColossus.item=
+    I:UtilityMobs.ObsidianColossus.lexiconDisplaySize=40
+    I:UtilityMobs.ObsidianColossus.metadata=0
+    I:UtilityMobs.ObsidianColossus.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.ObsidianGolem
+    S:UtilityMobs.ObsidianGolem.item=
+    I:UtilityMobs.ObsidianGolem.lexiconDisplaySize=40
+    I:UtilityMobs.ObsidianGolem.metadata=0
+    I:UtilityMobs.ObsidianGolem.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.ObsidianTurret
+    S:UtilityMobs.ObsidianTurret.item=
+    I:UtilityMobs.ObsidianTurret.lexiconDisplaySize=40
+    I:UtilityMobs.ObsidianTurret.metadata=0
+    I:UtilityMobs.ObsidianTurret.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.Scarecrow
+    S:UtilityMobs.Scarecrow.item=
+    I:UtilityMobs.Scarecrow.lexiconDisplaySize=40
+    I:UtilityMobs.Scarecrow.metadata=0
+    I:UtilityMobs.Scarecrow.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.ShotgunTurret
+    S:UtilityMobs.ShotgunTurret.item=
+    I:UtilityMobs.ShotgunTurret.lexiconDisplaySize=40
+    I:UtilityMobs.ShotgunTurret.metadata=0
+    I:UtilityMobs.ShotgunTurret.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.SniperTurret
+    S:UtilityMobs.SniperTurret.item=
+    I:UtilityMobs.SniperTurret.lexiconDisplaySize=40
+    I:UtilityMobs.SniperTurret.metadata=0
+    I:UtilityMobs.SniperTurret.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.SnowTurret
+    S:UtilityMobs.SnowTurret.item=
+    I:UtilityMobs.SnowTurret.lexiconDisplaySize=40
+    I:UtilityMobs.SnowTurret.metadata=0
+    I:UtilityMobs.SnowTurret.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.SteamGolem
+    S:UtilityMobs.SteamGolem.item=
+    I:UtilityMobs.SteamGolem.lexiconDisplaySize=40
+    I:UtilityMobs.SteamGolem.metadata=0
+    I:UtilityMobs.SteamGolem.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.StoneColossus
+    S:UtilityMobs.StoneColossus.item=
+    I:UtilityMobs.StoneColossus.lexiconDisplaySize=40
+    I:UtilityMobs.StoneColossus.metadata=0
+    I:UtilityMobs.StoneColossus.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.StoneGolem
+    S:UtilityMobs.StoneGolem.item=
+    I:UtilityMobs.StoneGolem.lexiconDisplaySize=40
+    I:UtilityMobs.StoneGolem.metadata=0
+    I:UtilityMobs.StoneGolem.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.StoneLargeGolem
+    S:UtilityMobs.StoneLargeGolem.item=
+    I:UtilityMobs.StoneLargeGolem.lexiconDisplaySize=40
+    I:UtilityMobs.StoneLargeGolem.metadata=0
+    I:UtilityMobs.StoneLargeGolem.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.StoneTurret
+    S:UtilityMobs.StoneTurret.item=
+    I:UtilityMobs.StoneTurret.lexiconDisplaySize=40
+    I:UtilityMobs.StoneTurret.metadata=0
+    I:UtilityMobs.StoneTurret.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.UMIronGolem
+    S:UtilityMobs.UMIronGolem.item=
+    I:UtilityMobs.UMIronGolem.lexiconDisplaySize=40
+    I:UtilityMobs.UMIronGolem.metadata=0
+    I:UtilityMobs.UMIronGolem.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.UMSnowGolem
+    S:UtilityMobs.UMSnowGolem.item=
+    I:UtilityMobs.UMSnowGolem.lexiconDisplaySize=40
+    I:UtilityMobs.UMSnowGolem.metadata=0
+    I:UtilityMobs.UMSnowGolem.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.VolleyTurret
+    S:UtilityMobs.VolleyTurret.item=
+    I:UtilityMobs.VolleyTurret.lexiconDisplaySize=40
+    I:UtilityMobs.VolleyTurret.metadata=0
+    I:UtilityMobs.VolleyTurret.rate=-1
+
+    # Configuration of Shedding for UtilityMobs.WorkbenchGolem
+    S:UtilityMobs.WorkbenchGolem.item=
+    I:UtilityMobs.WorkbenchGolem.lexiconDisplaySize=40
+    I:UtilityMobs.WorkbenchGolem.metadata=0
+    I:UtilityMobs.WorkbenchGolem.rate=-1
+
     # Configuration of Shedding for Villager
     S:Villager.item=minecraft:emerald
     I:Villager.lexiconDisplaySize=40
@@ -1163,6 +1373,18 @@ shedding {
     I:atum.stoneSoldier.lexiconDisplaySize=40
     I:atum.stoneSoldier.metadata=0
     I:atum.stoneSoldier.rate=-1
+
+    # Configuration of Shedding for betterstorage.Cluckington
+    S:betterstorage.Cluckington.item=
+    I:betterstorage.Cluckington.lexiconDisplaySize=40
+    I:betterstorage.Cluckington.metadata=0
+    I:betterstorage.Cluckington.rate=-1
+
+    # Configuration of Shedding for betterstorage.Frienderman
+    S:betterstorage.Frienderman.item=
+    I:betterstorage.Frienderman.lexiconDisplaySize=40
+    I:betterstorage.Frienderman.metadata=0
+    I:betterstorage.Frienderman.rate=-1
     S:creeper_mite.item=
     I:creeper_mite.lexiconDisplaySize=40
     I:creeper_mite.metadata=0
