--- a/config/aobd.cfg
+++ b/config/aobd.cfg
@@ -143,6 +143,94 @@ Iron {
 }
 
 
+Lead {
+    B:"Disable All"=false
+    B:EnderIO=true
+    B:HydCraft=true
+    B:IC2=true
+    B:Mekanism=true
+    B:NetherOres=true
+    B:Railcraft=true
+    B:Thaumcraft=true
+    B:ThermalExpansion=true
+    B:UltraTech=true
+    B:appliedenergistics2=true
+    S:colour=0x989bbb
+    D:energy=1.0
+    S:extra=Silver
+    B:factorization=true
+    B:ganysnether=true
+    B:modularsystems=true
+    B:randomadditions=true
+}
+
+
+Mithril {
+    B:"Disable All"=false
+    B:EnderIO=true
+    B:HydCraft=true
+    B:IC2=true
+    B:Mekanism=true
+    B:NetherOres=true
+    B:Railcraft=true
+    B:Thaumcraft=true
+    B:ThermalExpansion=true
+    B:UltraTech=true
+    B:appliedenergistics2=true
+    S:colour=0xedffff
+    D:energy=1.0
+    S:extra=Mithril
+    B:factorization=true
+    B:ganysnether=true
+    B:modularsystems=true
+    B:randomadditions=true
+}
+
+
+Nickel {
+    B:"Disable All"=false
+    B:EnderIO=true
+    B:HydCraft=true
+    B:IC2=true
+    B:Mekanism=true
+    B:NetherOres=true
+    B:Railcraft=true
+    B:Thaumcraft=true
+    B:ThermalExpansion=true
+    B:UltraTech=true
+    B:appliedenergistics2=true
+    S:colour=0xffffe6
+    D:energy=1.0
+    S:extra=Platinum
+    B:factorization=true
+    B:ganysnether=true
+    B:modularsystems=true
+    B:randomadditions=true
+}
+
+
+Platinum {
+    B:"Disable All"=false
+    B:EnderIO=true
+    B:HydCraft=true
+    B:IC2=true
+    B:Mekanism=true
+    B:NetherOres=true
+    B:Railcraft=true
+    B:Thaumcraft=true
+    B:ThermalExpansion=true
+    B:UltraTech=true
+    B:appliedenergistics2=true
+    S:colour=0xeaffff
+    D:energy=1.0
+    S:extra=Platinum
+    B:factorization=true
+    B:ganysnether=true
+    B:modularsystems=true
+    B:randomadditions=true
+}
+
+
 Recipes {
     B:EnderIO=true
     B:HydCraft=true
@@ -176,6 +264,28 @@ Shadow {
     S:colour=0x373737
     D:energy=1.0
     S:extra=Shadow
+    B:factorization=true
+    B:ganysnether=true
+    B:modularsystems=true
+    B:randomadditions=true
+}
+
+
+Silver {
+    B:"Disable All"=false
+    B:EnderIO=true
+    B:HydCraft=true
+    B:IC2=true
+    B:Mekanism=true
+    B:NetherOres=true
+    B:Railcraft=true
+    B:Thaumcraft=true
+    B:ThermalExpansion=true
+    B:UltraTech=true
+    B:appliedenergistics2=true
+    S:colour=0xffffff
+    D:energy=1.0
+    S:extra=Lead
     B:factorization=true
     B:ganysnether=true
     B:modularsystems=true
