--- a/config/dendrology.cfg
+++ b/config/dendrology.cfg
@@ -24,6 +24,9 @@ general {
     # How often ancient saplings are found in mineshaft corridor chests. 0 disables. Higher values are less rare. [range: 0 ~ 2147483647, default: 1]
     I:mineshaftCorridorRarity=1
 
+    # How often ancient trees are found growing in the overworld. 0 disables. Higher values are less rare. [range: 0 ~ 10000, default: 1]
+    I:overworldTreeGenRarity=100
+
     # How often ancient saplings are found in stronghold corridor chests. 0 disables. Higher values are less rare. [range: 0 ~ 2147483647, default: 1]
     I:strongholdCorridorRarity=1
 
