--- a/config/enderio/EnderIO.cfg
+++ b/config/enderio/EnderIO.cfg
@@ -749,7 +749,7 @@ rail {
     B:useHardRecipes=false
 
     # If true copper and tin will be used in recipes when registered in the ore dictionary
-    B:useModMetals=true
+    B:useModMetals=false
 
     # When enabled machine chassis will require steel instead of iron.
     B:useSteelInChassi=false
