--- a/config/thaumicinfusion.cfg
+++ b/config/thaumicinfusion.cfg
@@ -57,6 +57,7 @@ aspects {
 
 blocks {
     B:"Abandoned Crate"=true
+    B:"Absorption Fluid"=true
     B:"Acacia Wood"=true
     B:"Acacia Wood Stairs"=true
     B:"Acacia Wood Wall Bracket"=true
@@ -98,6 +99,7 @@ blocks {
     B:"Arctic Gentian"=true
     B:"Ardite Crop"=true
     B:"Armatocereus Matucanensis"=true
+    B:"Armor Stand"=true
     B:"Arrow Arum"=true
     B:"Artichoke Crop"=true
     B:"Artist's Conk"=true
@@ -117,6 +119,7 @@ blocks {
     B:Avocado=true
     B:"Avocado Sapling"=true
     B:Azalea=true
+    B:Backpack=true
     B:"Bamboo Crop"=true
     B:Banana=true
     B:"Banana Sapling"=true
@@ -154,12 +157,16 @@ blocks {
     B:"Blackout Curtains"=true
     B:"Blaze Crop"=true
     B:"Blaze Rail"=true
+    B:"Blazing Pyrotheum"=true
+    B:"Blindness Fluid"=true
     B:"Block of Bedrockium"=true
     B:"Block of Brass"=true
     B:"Block of Coal"=true
     B:"Block of Copper"=true
     B:"Block of Diamond"=true
     B:"Block of Emerald"=true
+    B:"Block of Flesh"=true
+    B:"Block of Flint"=true
     B:"Block of Gold"=true
     B:"Block of Iron"=true
     B:"Block of Redstone"=true
@@ -231,6 +238,7 @@ blocks {
     B:"Canyon Creek Abelia"=true
     B:"Capacitor Bank (Deprecated)"=true
     B:"Cape Jasmine"=true
+    B:"Cardboard Box"=true
     B:Carnation=true
     B:Carpet=true
     B:"Carrot Cake"=true
@@ -283,6 +291,7 @@ blocks {
     B:"Coffee Bean Crop"=true
     B:Coleus=true
     B:Columbine=true
+    B:"Command Block Trigger"=true
     B:"Common Duckweed"=true
     B:"Common Eelgrass"=true
     B:"Common Mistletoe"=true
@@ -307,6 +316,7 @@ blocks {
     B:"Cotton Crop"=true
     B:"Cow Soul Crop"=true
     B:"Cracked Limestone"=true
+    B:"Crafting Station"=true
     B:"Crafting Table"=true
     B:"Cranberry Crop"=true
     B:"Creeper Soul Crop"=true
@@ -355,11 +365,13 @@ blocks {
     B:"Dead Bush"=true
     B:Deadnettle=true
     B:"Death Cap"=true
+    B:"Decay Fluid"=true
     B:"Deceiving Trillium"=true
     B:"Delnas Wood Stairs"=true
     B:Delphinium=true
     B:"Desert Garden"=true
     B:"Desk Bell"=true
+    B:"Destabilized Redstone"=true
     B:Detector=true
     B:"Detector Blaze Rail"=true
     B:"Detector Track"=true
@@ -402,6 +414,7 @@ blocks {
     B:Enchanter=true
     B:"End Portal"=true
     B:"End Stone"=true
+    B:"Ender Backpack"=true
     B:"Ender Charge"=true
     B:"Ender Crop"=true
     B:"Ender IO"=true
@@ -411,6 +424,7 @@ blocks {
     B:"Enderman Skull"=true
     B:"Energised Voidstone"=true
     B:"Energised Voidstone Pillar"=true
+    B:"Energized Glowstone"=true
     B:"Essence Crop"=true
     B:"Essence Ore"=true
     B:"Essence Torch"=true
@@ -451,6 +465,7 @@ blocks {
     B:Fire=true
     B:"Fire Crop"=true
     B:"Fire Resistance Crop"=true
+    B:"Fire Resistance Fluid"=true
     B:"Fire Water"=true
     B:"Fish Bone Cactus"=true
     B:Flax=true
@@ -477,6 +492,7 @@ blocks {
     B:"Fusewood Trapdoor"=true
     B:"Futura Block"=true
     B:"Garlic Crop"=true
+    B:"Gelid Cryotheum"=true
     B:Geranium=true
     B:"Ghast Soul Crop"=true
     B:"Ghostwood Button"=true
@@ -555,10 +571,14 @@ blocks {
     B:Hambone=true
     B:"Hardened Clay"=true
     B:"Harlequin Mistletoe"=true
+    B:"Harming Fluid"=true
+    B:"Haste Fluid"=true
     B:Hawkweed=true
     B:"Hawthorn Stairs"=true
     B:"Hay Bale"=true
     B:"Hay Scented Fern"=true
+    B:"Healing Fluid"=true
+    B:"Health Fluid"=true
     B:"Heat Sand"=true
     B:"Hekur Wood Stairs"=true
     B:"Herb Garden"=true
@@ -581,6 +601,7 @@ blocks {
     B:Houseleek=true
     B:Huckleberry=true
     B:"Hummingbird Bush"=true
+    B:"Hunger Fluid"=true
     B:Hydrangea=true
     B:Ice=true
     B:"Ice Door"=true
@@ -612,6 +633,9 @@ blocks {
     B:"Inverted Red Lamp"=true
     B:"Inverted White Lamp"=true
     B:"Inverted Yellow Lamp"=true
+    B:"Invisibility Fluid"=true
+    B:"Invisible Block"=true
+    B:"Invisible Block (Visible)"=true
     B:"Iridium Crop"=true
     B:Iris=true
     B:"Iron Bars"=true
@@ -664,6 +688,7 @@ blocks {
     B:"Lead Crop"=true
     B:Leadplant=true
     B:"Leafy Garden"=true
+    B:"Leaping Fluid"=true
     B:"Leaping Lily"=true
     B:Leaves=true
     B:"Leek Crop"=true
@@ -703,10 +728,13 @@ blocks {
     B:"Liquid Death"=true
     B:"Liquid Redstone"=true
     B:"Liquid Tin"=true
+    B:"Liquifacted Coal"=true
     B:"Liquified Emerald"=true
     B:"Liquified Ender"=true
     B:"Liquified Slime"=true
     B:"Lobster Claws"=true
+    B:"Locked Iron Door"=true
+    B:Locker=true
     B:"Lollipop Plant"=true
     B:Lupine=true
     B:"MESS Core"=true
@@ -749,6 +777,7 @@ blocks {
     B:"Metal Post"=true
     B:Mezereon=true
     B:Minedrake=true
+    B:"Mining Fatigue Fluid"=true
     B:"Mint Crops"=true
     B:Molten=true
     B:"Molten Aluminum"=true
@@ -795,6 +824,7 @@ blocks {
     B:"Mustard Seeds Crop"=true
     B:Mycelium=true
     B:"Natural Floor"=true
+    B:"Nausea Fluid"=true
     B:"Negative Space"=true
     B:Nemesia=true
     B:"Nether Brick"=true
@@ -809,6 +839,7 @@ blocks {
     B:"Nickel Crop"=true
     B:"Night Stone"=true
     B:"Night Vision Crop"=true
+    B:"Night Vision Fluid"=true
     B:Ninebark=true
     B:"Northern Bedstraw"=true
     B:"Northern Pitcher Plant"=true
@@ -900,6 +931,7 @@ blocks {
     B:"Player Sensor"=true
     B:Plum=true
     B:"Plum Sapling"=true
+    B:"Poison Fluid"=true
     B:Pomegranate=true
     B:"Pomegranate Sapling"=true
     B:"Porffor Wood Stairs"=true
@@ -912,10 +944,12 @@ blocks {
     B:"Prairie Brome"=true
     B:"Prairie Grass"=true
     B:"Prairie Sage"=true
+    B:Present=true
     B:"Pressure Plate"=true
     B:"Prickly Lettuce"=true
     B:"Prickly Pear"=true
     B:"Prickly Pear Cactus"=true
+    B:"Primal Mana"=true
     B:"Propeller Plant"=true
     B:"Pulsing Xenia"=true
     B:Pumpkin=true
@@ -964,7 +998,12 @@ blocks {
     B:"Reed Canary Grass"=true
     B:"Reed Mannagrass"=true
     B:"Regeneration Crop"=true
+    B:"Regeneration Fluid"=true
+    B:"Reinforced Chest"=true
+    B:"Reinforced Locker"=true
     B:"Reinforced Obsidian"=true
+    B:"Resistance Fluid"=true
+    B:"Resonant Ender"=true
     B:"Rhubarb Crop"=true
     B:"Rice Crop"=true
     B:"Richea Dracophylla"=true
@@ -1004,6 +1043,7 @@ blocks {
     B:"Sandstone Stairs"=true
     B:"Sapphire Crop"=true
     B:"Sargent Viburnum"=true
+    B:"Saturation Fluid"=true
     B:"Savin Juniper"=true
     B:"Scallion Crop"=true
     B:"Scaly Tree Fern"=true
@@ -1047,6 +1087,7 @@ blocks {
     B:"Skeleton Soul Crop"=true
     B:"Slime Channel"=true
     B:"Slime Soul Crop"=true
+    B:"Slowness Fluid"=true
     B:"Small Green Foliage"=true
     B:"Small Pasque Flower"=true
     B:"Smokey Quartz Slab"=true
@@ -1063,6 +1104,8 @@ blocks {
     B:"Softstem Bulrush"=true
     B:Solid=true
     B:"Solid Air"=true
+    B:"Solid Invisible Block"=true
+    B:"Solid Invisible Block (Visible)"=true
     B:Sortivator=true
     B:"Soul Sand"=true
     B:"Soybean Crop"=true
@@ -1098,11 +1141,13 @@ blocks {
     B:"Stone Stairs"=true
     B:"Stone Wall Bracket"=true
     B:Stonecrop=true
+    B:"Storage Crate"=true
     B:"Strange Sand"=true
     B:Strawberry=true
     B:"Strawberry Crop"=true
     B:"Streamside Bluebells"=true
     B:"Strength Crop"=true
+    B:"Strength Fluid"=true
     B:"Strengthened Glass"=true
     B:"Sugar Cane Crop"=true
     B:"Sugar cane"=true
@@ -1114,6 +1159,7 @@ blocks {
     B:"Swedish Ivy"=true
     B:"Sweet Potato Crop"=true
     B:"Sweetcorn Crop"=true
+    B:"Swiftness Fluid"=true
     B:"Switch Grass"=true
     B:"Sword Fern"=true
     B:TNT=true
@@ -1134,7 +1180,9 @@ blocks {
     B:"Terra Imbued Fire"=true
     B:"Texas Tickseed"=true
     B:"Textile Garden"=true
+    B:"Thaumaturge's Backpack"=true
     B:"Thaumic Cake"=true
+    B:"Thaumium Chest"=true
     B:"Thin Crystal Glass"=true
     B:"Thin Framed Glass"=true
     B:Thornvines=true
@@ -1214,6 +1262,7 @@ blocks {
     B:Water=true
     B:"Water Artichoke"=true
     B:"Water Breathing Crop"=true
+    B:"Water Breathing Fluid"=true
     B:"Water Chestnut"=true
     B:"Water Crop"=true
     B:"Water Garden"=true
@@ -1226,6 +1275,7 @@ blocks {
     B:"Water Wisteria"=true
     B:Watercress=true
     B:Waterstone=true
+    B:"Weakness Fluid"=true
     B:Web=true
     B:Weed=true
     B:"Weeping Forsythia"=true
@@ -1637,6 +1687,8 @@ blocks {
     B:tile.thatch0Slab.name=true
     B:tile.thatch0SlabFull.name=true
     B:tile.thatch0Stairs.name=true
+    B:tile.thermalfoundation.ore.name=true
+    B:tile.thermalfoundation.storage.name=true
     B:tile.tmechworks.meshFilter.name=true
     B:tile.toilet.name=true
     B:tile.tree.name=true
