--- a/config/FlaxbeardsSteamPower.cfg
+++ b/config/FlaxbeardsSteamPower.cfg
@@ -158,9 +158,9 @@ weapons {
     I:"FSP Villager ID"=694
     B:"Generate End Copper"=false
     B:"Generate End Zinc"=false
-    B:"Generate Nether Copper"=false
+    B:"Generate Nether Copper"=true
     B:"Generate Nether Zinc"=false
-    B:"Generate Overworld Copper"=false
+    B:"Generate Overworld Copper"=true
     B:"Generate Overworld Zinc"=true
 }
 
