--- a/config/cofh/CoFHLoot.cfg
+++ b/config/cofh/CoFHLoot.cfg
@@ -3,10 +3,7 @@
 feature {
 
     heads {
-        # If enabled, mobs only drop heads when killed by players.
         B:MobsDropOnPvEOnly=true
-
-        # If enabled, players only drop heads when killed by other players.
         B:PlayersDropOnPvPOnly=true
 
         enable {
@@ -31,7 +28,7 @@ feature {
 
 
 general {
-    B:EnableModule=true
+    B:EnableModule=false
 }
 
 
